--- a/SSI_TEAM/src/main/resources/application.properties
+++ b/SSI_TEAM/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 ### データベース接続設定123
-spring.datasource.url=jdbc:mysql://localhost:3306/ssi_team
+spring.datasource.url=jdbc:mysql://153.127.34.246:13306/db2
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
