--- a/SSI_TEAM/pom.xml
+++ b/SSI_TEAM/pom.xml
@@ -71,6 +71,15 @@
    			 <artifactId>javax.persistence-api</artifactId>
     		<version>2.2</version>
 		</dependency>
+		<dependency>
+    		<groupId>javax.validation</groupId>
+   			 <artifactId>validation-api</artifactId>
+   			 <version>2.0.1.Final</version> <!-- 任意のバージョンを指定 -->
+		</dependency>
+		 <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-validation</artifactId>
+    	</dependency>		
 	</dependencies>
 
 	<build>
